--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -3,8 +3,8 @@
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql2
-  username: plots
-  password: plots
+  username: root
+  password: 
   database: plots
   encoding: utf8mb4
   collation: utf8mb4_unicode_ci
