--- a/test/fixtures/node_tags.yml
+++ b/test/fixtures/node_tags.yml
@@ -217,3 +217,21 @@ test4_zoom:
   uid: 1
   nid: 7
   date: <%= DateTime.now.to_i %>
+
+organizers-awesome:
+  tid: 2
+  uid: 2
+  nid: 5
+  date: <%= DateTime.now.to_i %>
+
+organizers-everything:
+  tid: 4
+  uid: 2
+  nid: 5
+  date: <%= DateTime.now.to_i %>
+
+organizers-chapter:
+  tid: 5
+  uid: 2
+  nid: 5
+  date: <%= DateTime.now.to_i %>
